--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="RedditDashApp">
   <head>
     <meta charset="utf-8">
     <title>Reddit Dashboard</title>
@@ -10,7 +10,7 @@
     <script src="js/app.js"></script>
   </head>
 
-  <body>
+  <body ng-controller="DashCtrl">
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
