--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -27,8 +27,8 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Clear</a></li>
           </ul>
-          <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search...">
+          <form class="navbar-form navbar-right" ng-submit="search()">
+            <input type="text" class="form-control" ng-model="searchTerm" placeholder="Search...">
           </form>
         </div>
       </div>
