--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -39,7 +39,7 @@
         <div class="col-sm-3 col-md-2 sidebar">
           <h4>History</h4>
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="" class="deletex">x</a><a href="">Item 0</a></li>
+            <li class="active"><a href="" class="deletex">x</a><a href="" ng-model="searchTerm">{{searchTerm}}</a></li>
             <li><a href="" class="deletex">x</a><a href="">Item 1</a></li>
             <li><a href="" class="deletex">x</a><a href="">Item 2</a></li>
             <li><a href="" class="deletex">x</a><a href="">Item 3</a></li>
