hard-coded article data showing up on the page

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -76,20 +76,20 @@
             <table class="table table-striped">
               <thead>
                 <tr>
-                  <th>#</th>
-                  <th>Header</th>
-                  <th>Header</th>
-                  <th>Header</th>
-                  <th>Header</th>
+                  <th>Score</th>
+                  <th>Title</th>
+                  <th>Author</th>
+                  <th>Comments</th>
+                  <th>Whatever</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td>1,001</td>
-                  <td>Lorem</td>
-                  <td>ipsum</td>
-                  <td>dolor</td>
-                  <td>sit</td>
+                  <td>{{score}}</td>
+                  <td>{{title}}</td>
+                  <td>{{author}}</td>
+                  <td>{{comments}}</td>
+                  <td></td>
                 </tr>
                 <tr>
                   <td>1,002</td>
