--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,6 +7,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/dashboard.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.11/angular.min.js"></script>
+    <script src="https://rawgithub.com/gsklee/ngStorage/master/ngStorage.js"></script>
     <script src="js/app.js"></script>
   </head>
 
@@ -40,10 +41,10 @@
           <h4>History</h4>
           <ul class="nav nav-sidebar">
             <li class="active"><a href="" class="deletex">x</a><a href="" ng-model="searchTerm">{{searchTerm}}</a></li>
-            <li><a href="" class="deletex">x</a><a href="">Item 1</a></li>
-            <li><a href="" class="deletex">x</a><a href="">Item 2</a></li>
+            <li ng-repeat="item in history track by $index"><a href="" class="deletex">x</a><a href="">{{item}}</a></li>
+<!--             <li><a href="" class="deletex">x</a><a href="">Item 2</a></li>
             <li><a href="" class="deletex">x</a><a href="">Item 3</a></li>
-            <li><a href="" class="deletex">x</a><a href="">Item ...etc</a></li>
+            <li><a href="" class="deletex">x</a><a href="">Item ...etc</a></li> -->
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
