--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -53,7 +53,8 @@
             <div class="col-xs-6 col-sm-3 placeholder" ng-repeat="article in articleArray | limitTo:4 track by $index">
               <img src="{{article.data.thumbnail}}" class="img-responsive">
               <h4>{{article.data.title}}</h4>
-              <span class="text-muted">{{article.data.author}}</span>
+              <span class="text-muted">{{article.data.author}}</span><br>
+              <a href="http://reddit.com{{article.data.permalink}}" target="_blank"><button class="btn btn-primary">View</button></a>
             </div>
           </div>
 
